active status added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <button class="btn">change grid size</button>
     <div id="grid-container"></div>
   </body>
 </html>
